update: user career api response